2007-08-02 Xavier Claessens  <xclaesse@gmail.com>

	* doc/libempathy-gtk/tmpl/empathy-account-chooser.sgml:
	* doc/libempathy-gtk/tmpl/empathy-ui-utils.sgml:
	* doc/libempathy-gtk/tmpl/empathy-contact-widget.sgml:
	* doc/libempathy/tmpl/empathy-message.sgml:
	* doc/libempathy/tmpl/empathy-utils.sgml: Update doc.

2007-08-02 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-profile-chooser.c: Do not list profiles that
	don't have the corresponding CM installed when creating a new account.
	This is a workaround for MC bug: SF #1688779.

2007-08-02 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-widget-generic.c: Remove size_group.
	Fixes bug #462792.

2007-08-02 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-accounts-dialog.c:
	* libempathy/empathy-utils.c:
	* libempathy/empathy-utils.h: Adding new empathy_strdiff API stolen from
	telepathy-glib. It check if strings are != NULL before using strcmp.
	Using that API to fix bug #461886. Should be used in more places.

2007-08-02 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-status-icon.c: Click on the tray icon shows the
	window if it's not active and hide if it is. Fixes bug #462057
	(Olivier Valentin).

2007-08-02 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-group-chat.c: don't display
	"Topic set to: (null)". Fixes bug #460205 (Michael Scherer).

2007-07-30 Xavier Claessens  <xclaesse@gmail.com>

	* autogen.sh: Added back, it calls gnome-autogen.sh.

2007-07-29 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-profile-chooser.c:
	* libempathy/empathy-message.c: Add missing include string.h.

2007-07-29 Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump version to 0.11.

2007-07-29 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-widget-generic.c:
	* libempathy-gtk/empathy-account-widget-generic.h: Align param names
	on the left.
